tests/positive/Reachability/Data/Maybe.juvix
module Data.Maybe;

type Maybe (a : Type) :=
  | nothing : Maybe a
  | just : a → Maybe a;
