tests/negative/Internal/Positivity/E9.juvix
module E9;

type B :=
  | b : B;

type T :=
  | c : ((B → T) -> T) -> T;

